@@ -1,0 +1,1 @@
+ALTER TABLE kronolith_events ADD event_url VARCHAR2(4000);
