@@ -1,0 +1,1 @@
+ALTER TABLE kronolith_events ADD event_url TEXT;
